Anpassung des Software-Iot-Gateways an das nun ausgelagerte Kommunikationsmodul