@@ -1,5 +1,6 @@
-package de.adesso.softwareiotgateway.service.pairing;
+package de.adesso.softwareiotgateway.service.queuing;
 
+import de.adesso.softwareiotgateway.service.Pair;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -16,16 +17,18 @@ import static de.adesso.softwareiotgateway.configuration.HardwarePicoUtils.idAlr
 public class QueuingService {
     private final Set<String> hardwarePicos;
     private final Set<String> softwarePicos;
-    private final Set<String> hardwarePicosWaitingForRecovery;
-    private final Map<String, String> pairedPicos; // Cluster direkt ansprechen
+    private final Set<String> duplicateHardwarePicos;
+    private final Map<String, String> pendingRecoveries;
+    private final Map<String, String> pairedPicos;
     private final Logger logger = LoggerFactory.getLogger(QueuingService.class);
 
     @Autowired
-    public QueuingService(@Qualifier("hardwarePicoUris") Set<String> hardwarePicos, @Qualifier("softwarePicoUris") Set<String> softwarePicos,
-                          @Qualifier("hardwarePicoUrisWaitingForRecovery") Set<String> hardwarePicosWaitingForRecovery, Map<String, String> pairedPicos) {
+    public QueuingService(@Qualifier("hardwarePicos") Set<String> hardwarePicos, @Qualifier("softwarePicos") Set<String> softwarePicos,
+                          @Qualifier("duplicateHardwarePicos") Set<String> duplicateHardwarePicos, Map<String, String> pendingRecoveries, Map<String, String> pairedPicos) {
         this.hardwarePicos = hardwarePicos;
         this.softwarePicos = softwarePicos;
-        this.hardwarePicosWaitingForRecovery = hardwarePicosWaitingForRecovery;
+        this.duplicateHardwarePicos = duplicateHardwarePicos;
+        this.pendingRecoveries = pendingRecoveries;
         this.pairedPicos = pairedPicos;
     }
 
@@ -35,7 +38,7 @@ public class QueuingService {
             logger.info("[Queued Hardware-Pico URI=" + uri + "]");
         }
         else {
-            hardwarePicosWaitingForRecovery.add(uri);
+            duplicateHardwarePicos.add(uri);
             logger.info("[Queued Hardware-Pico URI=" + uri + " for Recovery]");
         }
     }
@@ -64,15 +67,17 @@ public class QueuingService {
         softwarePicos.remove(pair.getSecond());
     }
 
-    public boolean hasHardwarePicosWaitingForRecovery(){
-        return !hardwarePicosWaitingForRecovery.isEmpty();
+    public boolean hasDuplicateHardwarePicos(){
+        return !duplicateHardwarePicos.isEmpty();
     }
 
     public Pair<String, String> getFirstElementsWaitingForRecovery(){
-        if(hasHardwarePicosWaitingForRecovery()) {
-            String hardwarePicoUri = hardwarePicosWaitingForRecovery.stream().toList().get(0);
-            hardwarePicosWaitingForRecovery.remove(hardwarePicoUri);
-            return new Pair<>(hardwarePicoUri, getSoftwareUriForHardwareUri(hardwarePicoUri));
+        if(hasDuplicateHardwarePicos()) {
+            String hardwarePicoUri = duplicateHardwarePicos.stream().toList().get(0);
+            duplicateHardwarePicos.remove(hardwarePicoUri);
+            Pair<String, String> p =  new Pair<>(hardwarePicoUri, getSoftwareUriForHardwareUri(hardwarePicoUri));
+            pendingRecoveries.put(p.getSecond(), p.getFirst());
+            return p;
         }
         return null;
     }
@@ -84,6 +89,10 @@ public class QueuingService {
             }
         }
         return null;
+    }
+
+    public String getHardwarePicoToRecover(String softwarePico){
+        return pendingRecoveries.get(softwarePico);
     }
 
 
